add lockheight as a parameter
